--- a/djangoteste/testedjango/templates/index.html
+++ b/djangoteste/testedjango/templates/index.html
@@ -12,9 +12,8 @@
 <body>
     {% include 'nav.html' %}
 
-    {% block body %}
-        <h1>Hotel Senai</h1>
-    {% endblock %}
+    (% block body %)
+    (% endblock %)
 
     {% include 'footer.html' %}
 </body>
