--- a/djangoteste/testedjango/hotel/templates/homepage.html
+++ b/djangoteste/testedjango/hotel/templates/homepage.html
@@ -1,10 +1,8 @@
-(% extend 'index.html' %)
-
-(% block title %)
+{ % block title % }
     Hotel Senai
-(% endblock %)
+{ % endblock % }
 
-(% block body %)
+{ % block body % }
 
     <h1>Seja bem-vindo ao Hotel Senai</h1>
     <p>Conheça nossas instalações e faça sua reserva.</p>
@@ -12,4 +10,4 @@
     <p>Telefone para contato: (11) 1234-5678.</p>
     <p>Email para contato:
 
-( % endblock %)
+{ % endblock % }
