--- a/djangoteste/testedjango/templates/index.html
+++ b/djangoteste/testedjango/templates/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        (% block head %)
+        { % block head % }
             Hotel Senai
-        (% endblock %)
+        { % endblock % }
     </title>
 </head>
 <body>
     {% include 'nav.html' %}
 
-    (% block body %)
-    (% endblock %)
+    { % block body % }
+    { % endblock % }
 
     {% include 'footer.html' %}
 </body>
