--- a/djangoteste/testedjango/hotel/templates/homepage.html
+++ b/djangoteste/testedjango/hotel/templates/homepage.html
@@ -1,16 +1,22 @@
+
+{% extends 'index.html' %}
+{% load static %}
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% endblock %}
 {% block title %}
-    Hotel Senai
+Homepage
 {% endblock %}
 
-{% block body %}
 
-{% load static %}
+{% block body%}
+{% for hotel in dados_hotel %}
+<div class="hotel-info">
+    <h2>{{ hotel.titulo }}</h2>
+    <p>{{ hotel.desc }}</p>
+{% endfor %}
+{% endblock %}
 
-    <h1>Seja bem-vindo ao Hotel Senai</h1>
-    <p>Conheça nossas instalações e faça sua reserva.</p>
-    <p>Estamos localizados na Rua do Senai, 123, Centro, São Paulo, SP.</p>
-    <p>Telefone para contato: (11) 1234-5678.</p>
-    <p>Email para contato:</p>
-    <img src="{% static 'image/senai.png' %}" alt="senai" />
-
+{% block footer%}
+<p>Hotel Senai - 2024</p>
 {% endblock %}
