--- a/djangoteste/testedjango/templates/nav.html
+++ b/djangoteste/testedjango/templates/nav.html
@@ -11,4 +11,10 @@
     <li class="nav-item">
         <a class="nav-link" href="/quartos">Quartos</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/cadastro">Cadastro</a>
+        <li class="nav-item">
+        <a class="nav-link" href="/login">Login</a>
+    </li>
+    </li>
 </ul>
